# django-mcp-sql

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASING.md  __init__.py  admin.py  apps.py  auth.py  conf.py  consts.py  db_router.py  decorators.py  executor.py  fencing.py  grants.py  models.py  oauth.py  observability.py  parser.py  pyproject.toml  schemas.py  session.py  signals.py  throttle.py  urls.py  validation.py
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  oauth.md  role-setup.md
example/: Makefile  README.md  manage.py  pyproject.toml
example/example/: asgi.py  mfa.py  settings.py  urls.py  wsgi.py
example/notes/: apps.py  models.py
example/notes/migrations/: 0001_initial.py  0002_mcp_second_profile_view.py
management/commands/: mcp_sql_grants.py  mcp_sql_lint.py  mcp_sql_role_setup.py  mcp_sql_smoke.py
migrations/: 0001_initial.py  0002_revoke_audit_grants.py  0003_alter_mcpquerylog_result_sample.py  0004_create_mcp_sql_users_group.py  0005_create_mcp_sql_application.py  0006_remove_mcpquerylog_result_sample.py  0007_mcpauthrejectionlog.py  0008_revoke_mcpauthrejectionlog_grants.py  0009_alter_mcpauthrejectionlog_reason.py  0010_mcpquerylog_tool.py  0011_alter_mcpquerylog_options_mcpquerylog_profile_and_more.py  0012_mcpauthrejectionlog_client_redirect_and_more.py
sql/: 10_mcp_role.sh  role_setup.sql
templates/admin/mcp_sql/: mcpquerylog_change_list.html  usage_summary.html
templates/mcp_sql/: authorize.html
tests/: conftest.py  factories.py  settings.py  test_admin.py  test_auth_class.py  test_cloud_clients.py  test_conf.py  test_consts.py  test_db_router.py  test_decorators.py  test_discovery.py  test_docs_config.py  test_executor.py  test_fencing.py  test_grants_auto_reconcile.py  test_grants_check.py  test_lint.py  test_mcp_endpoint.py  test_models.py  test_oauth.py  test_observability.py  test_parser.py  test_profiles.py  test_profiles_isolation.py  test_registration.py  test_role_setup.py  test_session_context.py  test_signals.py  test_smoke.py  test_throttle.py  test_validation.py  urls.py
tests/testapp/: apps.py  models.py
views/: discovery.py  mcp_endpoint.py  oauth_authorize.py  registration.py
